# fullstack-issue

./: README.md
backend/src/: schema.rs  store.rs
backend/src/resolver/: post.rs  user.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/graphql/: queries.graphql
frontend/src/: App.tsx  index.css
frontend/src/components/: Error.tsx  PostCard.tsx
frontend/src/graphql/: generated.ts
frontend/src/lib/: graphql.ts
frontend/src/pages/: NotFoundPage.tsx
fullstack-issue-sub/: README.md
fullstack-issue-sub/backend/: Cargo.toml
fullstack-issue-sub/backend/src/: main.rs
fullstack-issue-sub/backend/src/model/: post.rs  user.rs
fullstack-issue-sub/backend/src/resolver/: mod.rs
fullstack-issue-sub/frontend/: codegen.ts  index.html
fullstack-issue-sub/frontend/graphql/: mutations.graphql  schema.json
fullstack-issue-sub/frontend/src/components/: Loading.tsx
fullstack-issue-sub/frontend/src/hooks/: usePosts.ts
fullstack-issue-sub/frontend/src/pages/: NewPostPage.tsx  PostDetailPage.tsx  PostListPage.tsx
